TOMEE-4474 - TomEE does not launch on Java 24
Support Java 24 at Runtime at the cost of loosing EJB Method Security, which does not work due to the deprecation / removal of SecurityManager in Java 21+ anyway.